--- a/src/component/Navbar/index.css
+++ b/src/component/Navbar/index.css
@@ -2,6 +2,8 @@
     background-color: #2E2E30;
     width: 75%;
     min-height: 100vh;
+    position: fixed;
+    z-index: 1000;
 }
 .header_mid_outer.active{
     transform: translateX(0);
